--- a/package.json
+++ b/package.json
@@ -5,14 +5,44 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dist": " electron-builder build",
+    "pack": "build --dir"
   },
   "author": "Maciej Bregisz",
   "license": "ISC",
-  "devDependencies": {
-    "electron": "^19.0.7"
+  
+  "build": {
+    "appId": "ScreenTesting",
+    "dmg": {
+      "contents": [
+        {
+          "x": 110,
+          "y": 150
+        },
+        {
+          "x": 240,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ]
+    },
+    "win": {
+      "target": "portable"
+    }
   },
   "dependencies": {
+    "electron-reload": "^2.0.0-alpha.1"
+  },
+  "devDependencies": {
+    "electron-builder": "^23.1.0",
     "electron-reload": "^2.0.0-alpha.1"
   }
 }
